tests/suite/fail/types/string_mul_int.ny
fn main() {
    let x = "abc"
    x * 2 //~ ERROR Type mismatch in arithmetic
}
